[package]
name = "mvtcurl"
version = "0.1.0"
edition = "2026"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
prost-build = "0.13"
